13-fargate-basics/applications/ns-app2/nginx-app2-deployment-nodeport.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-app2-deployment
  labels:
    name: nginx-app2
  namespace: ns-app2
spec:
  replicas: 1
  selectors:
    matchLabels:
      app: nginx-app2
  template:
    metadata:
      labels:
        name: nginx-app2
    spec:
      containers:
      - name: nginx-app2
        image: kube-nginxapp2:1.0.0
        ports:
          containerPort: 80
        resources:
          requests:
            cpu: "500m"
            memory: "128M"
          limits:
            cpu: "1000m"
            memory: "512M"  
        livenessProbe:
          httpGet:
            path: /app2/index.html
            port: 5000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /app2/index.html
            port: 5000
          initialDelaySeconds: 30
          timeoutSeconds: 10

---

kind: Service
apiVersion: v1
metadata:
  name: nginx-app2-nodeport-service
  labels:
    app: nginx-app2
  namespace: ns-app2
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app2/index.html
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: nginx-app2
  type: NodePort
  ports:
  - port:  80
    targetPort:  80
