13-fargate-basics/applications/ns-app2/alb-ingress-app2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  labels:
    app: nginx-app2
  namespace: ns-app2
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: app2-ingress
    # Ingress Core Settings  
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'  
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External DNS - For creating a Record Set in Route53
    external-dns.alpha.kubernetes.io/hostname: app201.vibhurawat.com
    alb.ingress.kubernetes.io/target-type: ip
spec:
  tls: 
    - hosts:
      - "*.vibhurawat.com"
  rules:
  - http:
      paths:
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: nginx-app2-nodeport-service
            port:
              number: 80
